--- a/src/pages/cienciasambientales/index.astro
+++ b/src/pages/cienciasambientales/index.astro
@@ -114,10 +114,9 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
       <h2 class="section-subtitle">Docente colaborador</h2>
 
       <p>
-        Ejerzo la docencia en el Colegio Oficial de Ambientólogos de Cataluña,
-        dentro de su Escuela de Formación, impartiendo contenidos relacionados con biodiversidad,
-        territorio y gestión de espacios naturales a profesionales del ámbito ambiental que
-        aspiran a incorporarse a la función pública o a reforzar su criterio técnico.
+	Lidero la formación especializada en biodiversidad y espacios naturales para oposiciones del subgrupo A1 (cuerpo superior) de la Generalitat. 	
+	Diseño los temarios, alineados con los marcos normativos autonómicos, estatales y europeos junto a la práctica profesional e imparto
+	las sesiones formativas para los ambientólogos y profesionales del sector del medio ambiente colegiados que aspiran a incorporarse a la función pública o a reforzar su criterio técnico.
       </p>
 
       <p class="external-link">
